syntax = "proto3";

package user.v1;

option go_package = "github.com/Ostap00034/course-work-backend-user-service/api/user/v1;v1";

service UserService {
  // Регистрируем нового пользователя
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // Проверяем email+password, возвращаем userId
  rpc ValidateCredentials(ValidateCredentialsRequest) returns (ValidateCredentialsResponse);
  // Получаем данные пользователя по ID
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

message CreateUserRequest {
  string email    = 1;
  string password = 2;
}

message CreateUserResponse {
  string userId = 1;
}

message ValidateCredentialsRequest {
  string email    = 1;
  string password = 2;
}

message ValidateCredentialsResponse {
  string userId = 1;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  string userId    = 1;
  string email     = 2;
  int64  createdAt = 3;
  int64  updatedAt = 4;
}
